<resources>
  <string name="app_name">Simple Meal Planner</string>
  <string name="recipe_image_content_description">Recipe Image</string>
  <string name="recipe_search_bar_hit">Search food or ingredients</string>
  <string name="recipe_empty_start_text">Need a little inspiration for dinner tonight? Search for something tasty to get started!</string>
  <string name="recipe_empty_error_text">Oops. Something doesn\'t seem right. Try a different search</string>
  <string name="recipe_details_serving">Servings:</string>
  <string name="recipe_detail_calories">Calories per serving:</string>
  <string name="recipe_detail_card_title">Details</string>
  <string name="detail_ingredients_label">Ingredients:</string>
  <string name="bullet">\u25CF</string>
  <string name="recipe_image_transition">recipeImageTransition</string>
  <string name="detail_button_text">Full Recipe</string>
  <string name="detail_recipe_source_label">Source:</string>
  <string name="snackbar_recipe_deleted">Recipe Removed From Favorites</string>
  <string name="snackbar_recipe_saved">Recipe Saved To Favorites</string>
  <string name="detail_meal_plan_button_text">Add to Meal Plan</string>
  <string name="detail_meal_plan_dialog_title">Pick a day</string>
  <string name="common_ok">OK</string>
  <string name="common_back">BACK</string>
  <string name="detail_meal_plan_snackbar_text">Recipe saved for %s</string>
  <string name="common_favorites">Favorites</string>
  <string name="common_meal_plan">Meal Plan</string>
  <string name="detail_snackbar_meal_plan_removed">Recipe removed from meal plan</string>
  <string name="menu_sign_out">Sign Out</string>
  <string name="snack_bar_sign_out_message">Successfully signed out!</string>
  <string name="menu_sign_in">Sign In</string>
  <string name="snackbar_sign_in_message">Successfully Signed In!</string>
  <string name="share_snackbar_error_text">Oops, that didn\'t work. Please try again</string>
  <string name="detail_permission_dialog_title">Grant contact permission to share</string>
  <string name="detail_permission_dialog_message">In order to share this delicious recipe, we need access to your contacts so we know who to share it with.</string>
  <string name="share_snackbar_success_text">Recipe shared with %s!</string>
  <string name="share_recipe_snackbar_user_not_registered">%s is not a registered user yet!</string>
  <string name="share_dialog_title">Share This Recipe!</string>
  <string name="share_dialog_message">Would You like to share this recipe with %s?</string>
  <string name="favorite_button_tutorial_title">Easily save your favorite recipes!</string>
  <string name="favorite_button_tutorial_message">Click on the heart to save a recipe. Click it again to remove it.</string>
  <string name="share_button_tutorial_title">Now you can share this recipe!</string>
  <string name="share_button_tutorial_message">Click the share button to add this recipe to another Simple Meal Planner user\'s app to easily coordinate meals.</string>
  <string name="meal_plan_button_tutorial_title">Plan your meals for the week!</string>
  <string name="meal_plan_button_tutorial_message">Click this button to save a recipe to any day of the week for quick and simple meal planning.</string>
  <string name="disabled_share_button_snackbar_message">Add recipe to meal plan to share</string>
  <string name="no_network_error_message">Please double check your internet connection.</string>
  <string name="generic_error_message">Something went wrong. Please try again</string>
  <string name="shared_recipes_notification_channel_name">Shared Recipes</string>
  <string name="shared_recipes_notification_title">%1$s has shared a recipe with you</string>
  <string name="shared_recipes_notification_body">Let\'s make %1$s!</string>
  <string name="shared_recipes_notification_big_summary_text">"Added to your meal plan for %1$s!</string>
  <string name="create_recipe_title">Title</string>
  <string name="add_recipe_ingredient_line_hint">Ingredient #%s</string>
</resources>
